# api-dados

./: .dockerignore  .gitignore  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
api_dados/: Dockerfile  fly.toml
api_dados/api_dados/: app.py
api_dados/api_dados/minio/: ler_dados.ipynb  ler_tabela_ouro.ipynb  ler_tabela_prata.ipynb  vendas_bronze.py  vendas_ouro.py  vendas_prata.ipynb  vendas_prata.py
